Fixed Filters Misalignment
- The display property got overwritten somewhere for the communities tab header

--- a/EsportsManagementTool/EsportsManagementTool/static/communities-list.css
+++ b/EsportsManagementTool/EsportsManagementTool/static/communities-list.css
@@ -25,6 +25,7 @@
    COMMUNITIES TAB HEADER
    ----------------------------------------------- */
 #rosters .card-header {
+    display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
